--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@react-three/drei": "latest",
-    "@react-three/fiber": "latest",
-    "@remix-run/react": "latest",
-    "@sveltejs/kit": "latest",
+    "@react-three/drei": "^9.111.3",
+    "@react-three/fiber": "^8.17.10",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -48,10 +46,6 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "expo": "latest",
-    "expo-asset": "latest",
-    "expo-file-system": "latest",
-    "expo-gl": "latest",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
@@ -61,18 +55,15 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
-    "react-native": "latest",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
-    "simplex-noise": "latest",
+    "simplex-noise": "^4.0.3",
     "sonner": "^1.7.1",
-    "svelte": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "three": "latest",
+    "three": "^0.169.0",
+    "@types/three": "^0.169.0",
     "vaul": "^0.9.6",
-    "vue": "latest",
-    "vue-router": "latest",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -82,5 +73,6 @@
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
