--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.10",
+    "@types/three": "^0.169.0",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -62,7 +64,6 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
-    "@types/three": "^0.169.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
