--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@types/three": "^0.169.0",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "figlet": "^1.8.2",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
